fix: some improvements for post block on mobile

--- a/src/styles/mobile.scss
+++ b/src/styles/mobile.scss
@@ -163,8 +163,16 @@
         &__item {
             top: 20px;
             padding: 20px;
+            max-width: calc(100% - var(--main-padding) * 2);
+            max-height: calc(100% - 40px);
             header {
                 font-size: 0.7em;
+            }
+            &-close {
+                top: 15px;
+                right: 15px;
+                width: 35px;
+                height: 35px;
             }
         }
     }
